// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stake > should render the Stake component 1`] = `
<div
  class="operation s-DFOGCf36SJsY"
>
  <div
    class="dusk-wizard"
  >
     
     
     
    <dl
      class="contract-statuses s-fYGIMZDSuGmT"
    >
      <dt
        class="contract-statuses__label s-fYGIMZDSuGmT"
      >
        Spendable
         
      </dt>
      <dd
        class="contract-statuses__value s-fYGIMZDSuGmT"
      >
        <span
          class="s-fYGIMZDSuGmT"
        >
          1,000.000000000
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
        <!--&lt;Icon&gt;-->
         
      </dd>
      <dt
        class="contract-statuses__label s-fYGIMZDSuGmT"
      >
        Total Locked
         
      </dt>
      <dd
        class="contract-statuses__value s-fYGIMZDSuGmT"
      >
        <span
          class="s-fYGIMZDSuGmT"
        >
          278.000000000
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
        <!--&lt;Icon&gt;-->
         
      </dd>
      <dt
        class="contract-statuses__label s-fYGIMZDSuGmT"
      >
        Rewards
         
      </dt>
      <dd
        class="contract-statuses__value s-fYGIMZDSuGmT"
      >
        <span
          class="s-fYGIMZDSuGmT"
        >
          345.000000000
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
          data-tooltip-id="main-tooltip"
          data-tooltip-text="DUSK"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
          />
        </svg>
        
        <!--&lt;Icon&gt;-->
         
      </dd>
    </dl>
    <!--&lt;ContractStatusesList&gt;-->
     
    <div
      class="operation__amount operation__space-between s-DFOGCf36SJsY"
    >
      <p
        class="s-DFOGCf36SJsY"
      >
        Enter amount:
      </p>
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          USE MAX
        </span>
      </button>
      <!--&lt;Button&gt;-->
    </div>
     
    <div
      class="operation__amount operation__input s-DFOGCf36SJsY"
    >
      <input
        class="dusk-textbox dusk-textbox-number operation__input-field"
        max="9999.98"
        min="1000"
        required=""
        step="0.000000001"
        type="number"
      />
      
      <!--&lt;Textbox&gt;-->
       
      <svg
        class="dusk-icon dusk-icon--size--normal"
        data-tooltip-id="main-tooltip"
        data-tooltip-text="DUSK"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
        />
      </svg>
      
      <!--&lt;Icon&gt;-->
    </div>
     
    <div
      class="gas-settings s-qWT2RqqjhEXG"
    >
      <dl
        class="gas-settings__edit s-qWT2RqqjhEXG"
      >
        <div
          class="gas-fee s-IvXTyNf8Mc_c"
        >
          <span
            class="s-IvXTyNf8Mc_c"
          >
            Max Gas Fee:
          </span>
           
          <div
            class="gas-fee__amount s-IvXTyNf8Mc_c"
          >
            <span
              class="gas-fee__amount-value s-IvXTyNf8Mc_c"
            >
              0.020000000
            </span>
             
            <svg
              class="dusk-icon dusk-icon--size--normal dusk-amount__icon"
              data-tooltip-id="main-tooltip"
              data-tooltip-text="DUSK"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
              />
            </svg>
            
            <!--&lt;Icon&gt;-->
          </div>
        </div>
        <!--&lt;GasFee&gt;-->
        <dd
          class="s-qWT2RqqjhEXG"
        >
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--small"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              EDIT
            </span>
          </button>
          <!--&lt;Button&gt;-->
        </dd>
      </dl>
       
    </div>
    <!--&lt;GasSettings&gt;-->
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button-labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
        <!--&lt;Icon&gt;-->
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      <!--&lt;Button&gt;-->
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button-labeled"
        type="button"
      >
        <span
          class="dusk-button__text"
        >
          Next
        </span>
         
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
          />
        </svg>
        
        <!--&lt;Icon&gt;-->
      </button>
      <!--&lt;Button&gt;-->
    </div>
    
    
    <!--&lt;WizardStep&gt;-->
     
    
    <!--&lt;WizardStep&gt;-->
     
    
    <!--&lt;WizardStep&gt;-->
  </div>
  <!--&lt;Wizard&gt;-->
</div>
`;

exports[`Stake > should render the Stake notice 1`] = `
<div>
  <div
    class="operation s-DFOGCf36SJsY"
  >
    <div
      class="dusk-wizard"
    >
       
       
      <span
        class="dusk-badge dusk-badge--variant-warning"
      >
        WARNING
      </span>
      <!--&lt;Badge&gt;-->
       
      <div
        class="dusk-card dusk-card--on-surface"
      >
        <header
          class="dusk-card__header"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-card__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
          <h3
            class="h4"
          >
            Only stake if you have a node set up!
          </h3>
           
        </header>
         
        <p
          class="staking-warning s-DFOGCf36SJsY"
        >
          I understand that I have set up a node properly, as described 
          <a
            class="dusk-anchor"
            href="https://docs.dusk.network/getting-started/node-setup/overview"
            rel="noopener noreferrer"
            target="_blank"
          >
            HERE
          </a>
          <!--&lt;Anchor&gt;-->
          , and that I will lose funds if I have not done so correctly.
        </p>
         
        <div
          class="dusk-agreement staking-warning__agreement"
        >
          <input
            class="dusk-checkbox"
            id="dusk-checkbox-16"
            name="staking-warning"
            tabindex="0"
            type="checkbox"
          />
          <!--&lt;Checkbox&gt;-->
           
          <label
            class="dusk-agreement__label"
            for="dusk-checkbox-16"
          >
            Don't show this step again.
          </label>
        </div>
        <!--&lt;Agreement&gt;-->
      </div>
      
      <!--&lt;Card&gt;-->
       
      <div
        class="dusk-wizard__step-navigation"
      >
        <button
          class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button-labeled"
          type="button"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-button__icon"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
          <span
            class="dusk-button__text"
          >
            Back
          </span>
          
        </button>
        <!--&lt;Button&gt;-->
        
         
        <button
          class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal"
          type="button"
        >
          <span
            class="dusk-button__text"
          >
            Agree
          </span>
        </button>
        <!--&lt;Button&gt;-->
      </div>
      
      
      <!--&lt;WizardStep&gt;-->
       
      
      <!--&lt;WizardStep&gt;-->
       
      
      <!--&lt;WizardStep&gt;-->
       
      
      <!--&lt;WizardStep&gt;-->
    </div>
    <!--&lt;Wizard&gt;-->
  </div>
  <!--&lt;Stake&gt;-->
</div>
`;

exports[`Stake > should render the review step of the Stake component 1`] = `
<div
  class="operation s-DFOGCf36SJsY"
>
  <div
    class="dusk-wizard"
  >
     
    
    <!--&lt;WizardStep&gt;-->
     
     
     
    <div
      class="operation__stake s-DFOGCf36SJsY"
      style="animation: __svelte_3516408220_0 400ms linear 0ms 1 both;"
    >
      <dl
        class="contract-statuses s-fYGIMZDSuGmT"
      >
        <dt
          class="contract-statuses__label s-fYGIMZDSuGmT"
        >
          Spendable
           
        </dt>
        <dd
          class="contract-statuses__value s-fYGIMZDSuGmT"
        >
          <span
            class="s-fYGIMZDSuGmT"
          >
            1,000.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
        </dd>
        <dt
          class="contract-statuses__label s-fYGIMZDSuGmT"
        >
          Total Locked
           
        </dt>
        <dd
          class="contract-statuses__value s-fYGIMZDSuGmT"
        >
          <span
            class="s-fYGIMZDSuGmT"
          >
            278.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
        </dd>
        <dt
          class="contract-statuses__label s-fYGIMZDSuGmT"
        >
          Rewards
           
        </dt>
        <dd
          class="contract-statuses__value s-fYGIMZDSuGmT"
        >
          <span
            class="s-fYGIMZDSuGmT"
          >
            345.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal contract-statuses__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
        </dd>
      </dl>
      <!--&lt;ContractStatusesList&gt;-->
       
      <span
        class="dusk-badge dusk-badge--variant-warning"
      >
        REVIEW TRANSACTION
      </span>
      <!--&lt;Badge&gt;-->
       
      <dl
        class="stake-overview s-9iuFfX3q-D8R"
      >
        <dt
          class="stake-overview__label s-9iuFfX3q-D8R"
        >
          <svg
            class="dusk-icon dusk-icon--size--normal"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M5,5V19H19V5H5Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
           
          <span
            class="s-9iuFfX3q-D8R"
          >
            Amount
            :
          </span>
           
        </dt>
        <dd
          class="stake-overview__value s-9iuFfX3q-D8R"
        >
          <span
            class="s-9iuFfX3q-D8R"
          >
            1,000.000000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal stake-overview__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
        </dd>
      </dl>
      <!--&lt;StakeOverview&gt;-->
       
      <div
        class="gas-fee s-IvXTyNf8Mc_c"
      >
        <span
          class="s-IvXTyNf8Mc_c"
        >
          Max Gas Fee:
        </span>
         
        <div
          class="gas-fee__amount s-IvXTyNf8Mc_c"
        >
          <span
            class="gas-fee__amount-value s-IvXTyNf8Mc_c"
          >
            0.020000000
          </span>
           
          <svg
            class="dusk-icon dusk-icon--size--normal dusk-amount__icon"
            data-tooltip-id="main-tooltip"
            data-tooltip-text="DUSK"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
          <!--&lt;Icon&gt;-->
        </div>
      </div>
      <!--&lt;GasFee&gt;-->
    </div>
     
    <div
      class="dusk-wizard__step-navigation"
    >
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--normal dusk-icon-button-labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
          />
        </svg>
        
        <!--&lt;Icon&gt;-->
         
        <span
          class="dusk-button__text"
        >
          Back
        </span>
        
      </button>
      <!--&lt;Button&gt;-->
      
       
      <button
        class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--normal dusk-icon-button-labeled"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--normal dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 3C7.58 3 4 4.79 4 7V17C4 19.21 7.59 21 12 21S20 19.21 20 17V7C20 4.79 16.42 3 12 3M18 17C18 17.5 15.87 19 12 19S6 17.5 6 17V14.77C7.61 15.55 9.72 16 12 16S16.39 15.55 18 14.77V17M18 12.45C16.7 13.4 14.42 14 12 14C9.58 14 7.3 13.4 6 12.45V9.64C7.47 10.47 9.61 11 12 11C14.39 11 16.53 10.47 18 9.64V12.45M12 9C8.13 9 6 7.5 6 7S8.13 5 12 5C15.87 5 18 6.5 18 7S15.87 9 12 9Z"
          />
        </svg>
        
        <!--&lt;Icon&gt;-->
         
        <span
          class="dusk-button__text"
        >
          STAKE
        </span>
        
      </button>
      <!--&lt;Button&gt;-->
    </div>
    
    
    <!--&lt;WizardStep&gt;-->
     
    
    <!--&lt;WizardStep&gt;-->
  </div>
  <!--&lt;Wizard&gt;-->
</div>
`;
